--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-config": "^1.4.5",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
