--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-config": "^1.4.5",
+    "react-native-feather": "^1.1.2",
+    "react-native-svg": "^12.1.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-dom": "17.0.2",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
