--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "jsonserver": "^0.1.6",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-config": "^1.4.5",
