--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "jsonserver": "^0.1.6",
     "react": "17.0.2",
     "react-native": "0.66.4",
