chore: Cria objeto do Axios
É usado o arquivo .env para definir a URL do json-server.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # Define se será aberto o storybook ou o app (true|false)
 LOAD_STORYBOOK=true
+# URL de acesso ao json-server
+JSON_SERVER_URL=http://localhost:3333
