--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "jsonserver": "^0.1.6",
     "react": "17.0.2",
