--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.66.4",
     "react-native-config": "^1.4.5",
     "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "^2.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
